--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 
   <!-- =========== CSS =========== -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- =========== FONTS =========== -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
