--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 
   <!-- =========== CSS =========== -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
   <!-- =========== FONTS =========== -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,11 +25,11 @@
 
 <body>
   
-  <img src="/images/bg-pattern-top.svg" alt="background top pattern" class="bg__top">
-  <img src="/images/bg-pattern-bottom.svg" alt="background bottom pattern" class="bg__bottom">
+  <img src="images/bg-pattern-top.svg" alt="background top pattern" class="bg__top">
+  <img src="images/bg-pattern-bottom.svg" alt="background bottom pattern" class="bg__bottom">
   
   <div class="container">
-    <img src="/images/bg-pattern-card.svg" alt="background card pattern">
+    <img src="images/bg-pattern-card.svg" alt="background card pattern">
     <img src="images/image-victor.jpg" alt="Image of victor" class="img-pfp">
     
     <div class="container__maindata">
